Fix alignment on iPhone

--- a/css/main.css
+++ b/css/main.css
@@ -274,7 +274,7 @@ nav a:hover {
     .features {
         text-align: center;
         margin-left: 0;
-        width: inherit;
+        width: 100%;
     }
 
     .features > div {
